<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewVacio"
        android:layout_width="231dp"
        android:layout_height="44dp"
        android:layout_marginStart="164dp"
        android:backgroundTint="#3360A7"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:minHeight="48dp"
        android:textColorHint="#3360A7"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewCliente"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/textViewVacio1"
        android:layout_width="231dp"
        android:layout_height="44dp"
        android:layout_marginStart="164dp"
        android:backgroundTint="#3360A7"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:minHeight="48dp"
        android:textColorHint="#3360A7"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewFecha"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewVacio2"
        android:layout_width="231dp"
        android:layout_height="44dp"
        android:layout_marginStart="164dp"
        android:backgroundTint="#3360A7"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:minHeight="48dp"
        android:textColorHint="#3360A7"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewLibro"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="172dp"
        android:hint="@string/textViewCliente"
        android:textColorHint="#3360A7"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:hint="@string/textViewFecha"
        android:textColorHint="#3360A7"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCliente" />

    <TextView
        android:id="@+id/textViewLibro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:hint="@string/textViewLibro"
        android:textColorHint="#3360A7"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFecha" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/textView"
        android:textColorHint="#3360A7"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>